# vst-plugins

./: .gitignore  Cargo.toml  osx_vst_bundler.sh
oscify/: .gitignore  Makefile  oscify-config-example.json
oscify/src/: logger.rs  midi_pitch.rs  sender.rs  vst.rs
src/: config.rs  lib.rs  logger.rs  midi.rs  midi_pitch.rs  osc.rs  sender.rs  vst.rs
