[package]
authors = ["delu <davidelu93@gmail.com>"]
name = "oscify"
version = "0.1.0"

[dependencies]
log = "0.3.8"
rosc = "0.1.5"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
simplelog = "0.4.2"

[dependencies.vst2]
git = "https://github.com/rust-dsp/rust-vst"

[lib]
name = "oscify"
crate-type = ["cdylib"]
